--- a/my_website/aboutme.html
+++ b/my_website/aboutme.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <title>About me</title>
   </head>
   <body>
-    <a href="index.html">Home</a>
+    <a href="aboutme.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <h1>This is Amber's Home Page!</h1>
     <img src="images/home.jpg" height="250">
