changed about me

--- a/my_website/aboutme.html
+++ b/my_website/aboutme.html
@@ -5,8 +5,9 @@
     <title>About me</title>
   </head>
   <body>
-    <a href="aboutme.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
+    
     <h1>This is Amber's Home Page!</h1>
     <img src="images/home.jpg" height="250">
   </body>
