--- a/my_website/aboutme.html
+++ b/my_website/aboutme.html
@@ -8,7 +8,6 @@
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
      <a href="aboutme.html"> about me</a>
-    <h1>This is Amber's Home Page!</h1>
-    <img src="images/home.jpg" height="250">
+    <h1>this is my about me page!</h1>
   </body>
 </html>
