--- a/my_website/index.html
+++ b/my_website/index.html
@@ -8,7 +8,7 @@
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html"> about me</a>
-    <h1>This is Amber's Home Page!</h1>
+    <h1>amber's home page or whateva</h1>
     <img src="images/home.jpg" height="250">
   </body>
 </html>
