--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -8,11 +8,13 @@
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
      <a href="aboutme.html"> about me</a>
-    <h1>This is my Portfolio Page!</h1>
+    <h1>this is my portfolio page wow!</h1>
     <img src="images/portfolio.jpg" height="250">
+
     <br>
     <a target="_blank" href="https://scratch.mit.edu">
       <img src="images/scratchlogo.png" height="100">
+      <a href="https://scratch.mit.edu/projects/172108675/"> Scratch Project</a>
     </a>
 	  </body>
 	</html>
