--- a/my_website/index.html
+++ b/my_website/index.html
@@ -9,6 +9,6 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html"> about me</a>
     <h1>amber's home page or whateva</h1>
-    <img src="images/home.jpg" height="250">
+    <img src="images/lol.gif" height="250">
   </body>
 </html>
