--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -9,7 +9,7 @@
     <a href="portfolio.html">Portfolio</a>
      <a href="aboutme.html"> about me</a>
     <h1>this is my portfolio page wow!</h1>
-    <img src="images/portfolio.jpg" height="250">
+    <img src="images/gif.gif" height="250">
 
     <br>
     <a target="_blank" href="https://scratch.mit.edu">
