--- a/my_website/index.html
+++ b/my_website/index.html
@@ -5,8 +5,8 @@
     <title>Home</title>
   </head>
   <body>
-    <a href="index.html">Home</a>
-    <a href="portfolio.html">Portfolio</a>
+    <a href="index.html">home</a>
+    <a href="portfolio.html">portfolio</a>
     <a href="aboutme.html"> about me</a>
     <h1>amber's home page or whateva</h1>
     <img src="images/lol.gif" height="250">
