--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -12,6 +12,11 @@
     <img src="images/gif.gif" height="250">
 
     <br>
+    <br> 
+    <h2> Download your own Molik Mash</h2>
+    <br>
+    <a href="/my_website/images/links/MolikMash.apk"> MIT App</a>
+    
     <a target="_blank" href="https://scratch.mit.edu">
       <img src="images/scratchlogo.png" height="100">
       <a href="https://scratch.mit.edu/projects/172108675/"> Scratch Project</a>
